Change search gem and prepare for deploying

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -171,6 +171,13 @@ a:hover {
 #profile-body {
   padding: 5ex 4ex 2ex 4ex;
   font-family: 'Didact Gothic';
+  font-weight: bold;
+}
+
+#profile-footer {
+  padding: 2ex 3ex 2ex 3ex;
+  font-family: 'Didact Gothic';
+  font-weight: bolder;
 }
 
 #profile {
