--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,6 +16,8 @@
       </div>
     <% end %>
 
+    <%= render "layouts/notice-box" %>
+
     <div class="col-md-8 col-md-offset-2">
       <div class="panel panel-default">
 
