--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -4,44 +4,57 @@
   <p>Email: <%= @user.email %></p>
 </div>
 
-<div class="panel-footer">
+<% if current_user == @user %>
+  <div class="panel-footer" id="profile-footer">
+    <div class="label label-success">
+      Joined since <%= @user.created_at %>
+    </div>
+    <div class="label label-warning">
+      <%= link_to "/activities" do %>
+        Check my acctivities
+      <% end %>
+    </div>
+  </div>
+<% else %>
+  <div class="panel-footer">
 
-  <% @friendships = current_user.friendships.where(friend_id: @user) %>
-  <% if @friendships.present? %>
-    <% @friendship = @friendships.last %>
-    <% if @friendship.confirmed? %>
-      <div class="text-success">
-        <i class="fa fa-child"> Hello My Friend</i>
-      </div>
-    <% end %>
-  <% end %>
-
-  <div class="btn-group">
-    <% if @friendship.present? %>
+    <% @friendships = current_user.friendships.where(friend_id: @user) %>
+    <% if @friendships.present? %>
+      <% @friendship = @friendships.last %>
       <% if @friendship.confirmed? %>
-        <%= link_to friendship_path(@friendship), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-info" do %>
-          <i class="fa fa-meh-o"> Unfriend</i>
-        <% end %>
-      <% else %>
-        <div class="btn btn-info">
-          <i class="fa fa-spinner"> Request Sent</i>
+        <div class="text-success">
+          <i class="fa fa-child"> Hello My Friend</i>
         </div>
       <% end %>
-    <% else %>
-      <%= link_to friendships_path(friend_id: @user), method: :post, class: "btn btn-info" do %>
-        <i class="fa fa-smile-o"> Make Friend</i>
-      <% end %>
     <% end %>
 
-    <% if current_user.following?(@user) %>
-      <%= link_to "/users/#{@user.id}/unsubscribe", method: :patch, class: "btn btn-info" do %>
-        <i class="fa fa-eye">Unsubscribe</i>
+    <div class="btn-group">
+      <% if @friendship.present? %>
+        <% if @friendship.confirmed? %>
+          <%= link_to friendship_path(@friendship), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-info" do %>
+            <i class="fa fa-meh-o"> Unfriend</i>
+          <% end %>
+        <% else %>
+          <div class="btn btn-info">
+            <i class="fa fa-spinner"> Request Sent</i>
+          </div>
+        <% end %>
+      <% else %>
+        <%= link_to friendships_path(friend_id: @user), method: :post, class: "btn btn-info" do %>
+          <i class="fa fa-smile-o"> Make Friend</i>
+        <% end %>
       <% end %>
-    <% else %>
-      <%= link_to "/users/#{@user.id}/subscribe", method: :patch, class: "btn btn-info" do %>
-        <i class="fa fa-eye">Subscribe</i>
-      <% end %>
-    <% end %>
 
+      <% if current_user.following?(@user) %>
+        <%= link_to "/users/#{@user.id}/unsubscribe", method: :patch, class: "btn btn-info" do %>
+          <i class="fa fa-eye">Unsubscribe</i>
+        <% end %>
+      <% else %>
+        <%= link_to "/users/#{@user.id}/subscribe", method: :patch, class: "btn btn-info" do %>
+          <i class="fa fa-eye">Subscribe</i>
+        <% end %>
+      <% end %>
+
+    </div>
   </div>
-</div>
+<% end %>
