--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,4 @@
 <div class="row clearfix">
-
-  <% if notice.present? %>
-    <div class="col-md-8 col-md-offset-2">
-      <div class="panel animated fadeIn" id="notice-box">
-        <p id="notice"><%= notice %></p>
-      </div>
-    </div>
-  <% end %>
-
+  <%= render "layouts/notice-box" %>
   <%= render @post || "post" %>
 </div>
