--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,13 @@
+<%= render "layouts/notice-box" %>
+
 <div class="col-md-8 col-md-offset-2">
+  <div class="panel panel-default animated fadeIn" id="notice-box">
+    <p id="notice"><i class="fa fa-wrench"> This page is still under construction</i></p>
+  </div>
+</div>
+
+<div class="col-md-8 col-md-offset-2">
+
   <% @users.each do |user| %>
     <div class="panel panel-default animated fadeIn">
 
@@ -42,7 +51,7 @@
           <ul class="text-primary list-group" id="manager-links" >
             <li>Role?&nbsp&nbsp<span id="links-label"><%= role %></span></li>
             <li>Can/Cannot?</li>
-            <li><%= link_to "Recent Activity?", "/users/#{user.id}/activities", id: "manager-link" %></li>
+            <li><%= link_to "Recent Activity?", "/admin/activities/#{user.id}", id: "manager-link" %><span id="links-label"><i class="fa fa-angle-double-left">  check</i></span></li>
           </ul>
         </div>
 
