Fix show post page layout problem

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,6 @@
 <div class="row clearfix">
   <%= render "layouts/notice-box" %>
-  <%= render @post || "post" %>
+  <div class="col-md-8 col-md-offset-2">
+    <%= render @post || "post" %>
+  </div>
 </div>
