--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,7 +17,7 @@
         <div class="form-group">
           <div class="field">
             <%= f.label :mugshot %><br />
-            <%= image_tag resource.image.url, width: 100, height: 100 %>
+            <%= image_tag resource.image_url, width: 100, height: 100 unless resource.image_url.nil? %>
             <%= f.file_field :image, placeholder: "new image" %>
           </div>
           <br>
