--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,7 +2,7 @@
     <div class="panel-heading" id="post-head">
       <div class="nav navbar">
         <div class="navbar-left" id="post-user-image">
-          <%= image_tag post.user.image_url(:small), class: "img-circle"  unless post.user.image_url.nil? %>&nbsp&nbsp
+          <%= image_tag post.user.image_url(:small), width: 50, height: 50, class: "img-circle" unless post.user.image_url.nil? %>&nbsp&nbsp
         </div>
         <div class="navbar-left" id="post-info">
           <%= link_to user_profile_path(post.user) do %>
@@ -47,7 +47,7 @@
               <div class="nav navbar-nav navbar-default">
                 <div class="navbar-header">
                   <div class="navbar-brand">
-                    <%= image_tag current_user.image_url, width: 20, height: 20, class: "img-circle" unless current_user.image_url.nil? %>
+                    <%= image_tag current_user.image_url(:thumb), width: 20, height: 20, class: "img-circle" unless current_user.image_url.nil? %>
                   </div>
                 </div>
 
