--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
       <div class="panel-heading" id="profile-head">
         <div class="nav">
           <div class="navbar-left">
-            <%= image_tag @user.image_url(:medium) unless @user.image_url.nil? %>&nbsp&nbsp
+            <%= image_tag @user.image_url(:medium), width: 100, height: 100 unless @user.image_url.nil? %>&nbsp&nbsp
           </div>
         </div>
       </div>
