--- a/app/views/posts/front.html.erb
+++ b/app/views/posts/front.html.erb
@@ -1,7 +1,7 @@
 <div class="row clearfix">
   <%= render "layouts/notice-box" %>
 
-  <div class="col-md-8 col-md-offset-2 animated fadeIn" id="posts-all">
+  <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 animated fadeIn" id="posts-all">
     <% if @posts.present? %>
       <%= render @posts %>
     <% else %>
