--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@ $dark: #2A2A2A;
 body {
   font-family: fantasy;
   background-color: white;
+  padding-bottom: 50px;
 }
 
 a {
@@ -30,6 +31,11 @@ a {
 a:hover, a:visited, a:active {
   color: white;
   text-decoration: none;
+}
+
+@media screen and (max-width: 768px) {
+  #Zucker-search, #Zucker-menu, #comment-user {display: none;}
+
 }
 
 #Zuckerbar {
@@ -42,34 +48,100 @@ a:hover, a:visited, a:active {
 }
 
 #Zuckerbrand {
-  padding-left: 2ex;
+  padding-left: 0ex;
   padding-right: 2ex;
   color: white;
   font-size: 28px;
   font-weight: 600;
 }
 
-.container {
+#main {
   position: relative;
   padding-top: 80px;
   z-index: 1;
 }
 
+#message-board {
+  display: none;
+  border-radius: 10px;
+  background: none;
+  padding-left: 5ex;
+  padding-right: 5ex;
+  max-width: 600px;
+  text-align: left;
+}
 
-.panel-heading, .panel-body, .panel-footer {
-  padding: auto 5ex auto 5ex;
+#messages {
+  padding-left: 3ex;
+  padding-right: 3ex;
+  background-color: white;
+  height: 150px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  word-break: break-all;
+}
+#message-write {
+  background-color: rgba(100,100,100,0.1);
+}
+
+#message-open {
+  background: none;
+  height: 100%;
+  width: 100%;
+  padding-top: 3px;
+  color: rgba(100,100,100,0.1);
+  border: none;
+}
+#message-open:hover {
+  padding-top: 2px;
+  color: white;
+  font-weight: bold;
+  //border-color: rgba(100,100,100,0.1);
+  //border-width: 1px;
+  //border-radius: 5px;
+  //border-style: solid;
+}
+#message-close {
+  background: none;
+  color: rgba(255,255,255,0.8);
+  border: none;
+  display: none;
+}
+#message-close:hover {
+  color: rgba(255,255,255,1);
+}
+
+.navbar-fixed-bottom {
+  padding-top: 10px;
+  max-height: 250px;
+  min-height: 50px;
+  bottom: -10px;
+  opacity: 0.98;
+  border-top: none;
+}
+.navbar-fixed-bottom:hover {
+}
+
+.container {
+
 }
 .panel-heading {
   padding-top: 5ex;
+  padding-bottom: 0ex;
 }
-.panel-footer {
+.panel-body.panel-footer {
+  padding-left: 5ex;
+  padding-right: 5ex;
 }
 
 .navbar-left {
   padding-left: 0ex;
 }
 .navbar-right {
-  padding-right: 1ex;
+  padding-right: 0ex;
+}
+.navbar {
+  margin-bottom: 1ex;
 }
 
 #post {
@@ -81,11 +153,33 @@ a:hover, a:visited, a:active {
 #post-head {
   border-radius: 10px 10px 0 0;
   background-color: $dark;
+  padding-bottom: 0ex;
 }
 
-#post-user-image, #post-info, #post-options {
-  bottom: 0;
+#post-info {
+  padding-bottom: 0ex;
 }
+
+#post-options {
+  background: none;
+  padding-right: 2ex;
+  position: sticky;
+}
+
+#post-option-open {
+  color: white;
+  background: none;
+  border-color: rgba(255,255,255,0);
+  border-radius:5px;
+}
+
+#post-option-open:hover {
+  border-color: rgba(255,255,255,0.2);
+  border-width: thin;
+  border-radius:5px;
+}
+
+
 .img-circle {
   border-style: solid;
   border-color: #A0A0A0;
@@ -93,6 +187,7 @@ a:hover, a:visited, a:active {
 }
 
 #post-name {
+  padding-left: 0px;
   padding-top: 0px;
   font-size: 20px;
   font-weight: 600;
@@ -111,7 +206,15 @@ a:hover, a:visited, a:active {
 }
 
 #comment-menu {
-  width: 720px;
+  min-width: 630px;
+  margin: 0ex auto 0ex 5ex;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+#comment-add {
+  margin: 0ex auto 0ex 3ex;
+  padding-left: 2ex;
 }
 
 #post-react-btn {
@@ -126,6 +229,7 @@ a:hover, a:visited, a:active {
 
 #comment-body {
   padding: 2ex 3ex 2ex 3ex;
+
 }
 
 #comment-name {
@@ -145,11 +249,11 @@ a:hover, a:visited, a:active {
 }
 
 #edit-body {
-
+  width: 100%;
 }
 
 #edit-text {
-  width: 720px;
+  width: inherit;
   height: 240px;
   font-size: 20px;
   resize: vertical;
@@ -166,6 +270,7 @@ a:hover {
 }
 #profile-head {
   background-color: #3A3A3A;
+  padding-bottom: 3ex;
 }
 
 #profile-body {
