--- a/app/views/layouts/_notice-box.html.erb
+++ b/app/views/layouts/_notice-box.html.erb
@@ -1,5 +1,5 @@
 <% if notice.present? %>
-  <div class="col-md-8 col-md-offset-2">
+  <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
     <div class="panel panel-default animated fadeIn" id="notice-box">
       <p id="notice"><%= notice %></p>
     </div>
