--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row clearfix">
   <%= render "layouts/notice-box" %>
-  <div class="col-md-8 col-md-offset-2">
+  <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
     <%= render @post || "post" %>
   </div>
 </div>
