--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <% if comment.user.present? %>
   <div class="nav navbar-default">
     <div id="comment-body">
-      <div class="navbar-header">
+      <div class="navbar-header" id="comment-user">
         <%= image_tag comment.user.image_url(:thumb), width: 20, height: 20, class: "img-circle" unless comment.user.image_url.nil? %>
       </div>
       <div class="navbar-left">
