--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <%= csrf_meta_tags %>
-<%= stylesheet_link_tag    'application', media: 'all' %>
-<%= javascript_include_tag 'application' %>
+<%= stylesheet_link_tag "application", "data-turbo-track": "reload", media: 'all' %>
+<%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module", defer: true %>
 <%= action_cable_meta_tag %>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
