--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row clearfix">
   <%= render "layouts/notice-box" %>
 
-  <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 animated fadeIn" id="posts-all">
+  <div class="col-12 col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-6 offset-lg-3 animated fadeIn" id="posts-all">
     <% if @posts.present? %>
       <%= render @posts %>
     <% else %>
@@ -17,7 +17,7 @@
 </div>
 
 <div class="row" id="page-bar">
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-4 offset-md-4">
     <%# will_paginate @posts %>
   </div>
 </div>
