--- a/app/views/layouts/_zuckerbar.html.erb
+++ b/app/views/layouts/_zuckerbar.html.erb
@@ -1,41 +1,43 @@
-<div class="navbar-left">
-  <% if user_signed_in? %>
-    <a href="/posts" class="navbar-brand animated rubberBand" id="Zuckerbrand"><strong>Markbook</strong></a>
-  <% else %>
-    <a href="/" class="navbar-brand animated fadeIn" id="Zuckerbrand"><strong>Markbook</strong></a>
-  <% end %>
-</div>
-<div id="Zucker-search">
-  <%= form_with url: posts_path, method: :get, class: "navbar-form navbar-left", local: true do |f| %>
-    <div class="form-group">
-      <%= f.text_field :key, placeholder: "Any Keywords", class: "form-control", required: true %>
-    </div>
-    <%= f.submit "Search", class: "btn btn-default" %>
-  <% end %>
-</div>
-<div class="navbar navbar-nav navbar-right" id="Zucker-menu">
-  <div class="btn btn-group">
-    <% if user_signed_in? %>
-      <% if current_user.banned? %>
-        <span class="label label-danger btn" >You've been banned by Zucker</span>
+<a class="navbar-brand" href="<%= user_signed_in? ? '/posts' : '/' %>" id="Zuckerbrand">
+  <strong>Markbook</strong>
+</a>
+
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+
+<div class="collapse navbar-collapse" id="navbarNav">
+  <div class="navbar-nav me-auto" id="Zucker-search">
+    <%= form_with url: posts_path, method: :get, class: "d-flex", local: true do |f| %>
+      <%= f.text_field :key, placeholder: "Any Keywords", class: "form-control me-2", required: true %>
+      <%= f.submit "Search", class: "btn btn-outline-light" %>
+    <% end %>
+  </div>
+
+  <div class="navbar-nav" id="Zucker-menu">
+    <div class="btn-group" role="group">
+      <% if user_signed_in? %>
+        <% if current_user.banned? %>
+          <span class="badge bg-danger">You've been banned by Zucker</span>
+        <% else %>
+          <%= link_to new_post_path, class: "btn btn-outline-light" do %>
+            <i class="fa fa-pencil"></i> Post
+          <% end %>
+        <% end %>
+        <%= link_to edit_user_registration_path, class: "btn btn-outline-light" do%>
+          <i class="fa fa-cog"></i> Account
+        <% end %>
+        <%= link_to destroy_user_session_path, method: :delete, data: { confirm: "Are you sure to leave?" }, class: "btn btn-outline-light" do%>
+          <i class="fa fa-sign-out"></i> Sign Out
+        <% end %>
       <% else %>
-        <%= link_to new_post_path, class: "btn" do %>
-          <i class="fa fa-pencil"> Post</i>
+        <%= link_to user_registration_path, class: "btn btn-outline-light" do %>
+          <i class="fa fa-user-plus"></i> Sign Up
+        <% end %>
+        <%= link_to new_user_session_path, class: "btn btn-outline-light" do %>
+          <i class="fa fa-sign-in"></i> Sign In
         <% end %>
       <% end %>
-      <%= link_to edit_user_registration_path, class: "btn" do%>
-        <i class="fa fa-cog"> Account</i>
-      <% end %>
-      <%= link_to destroy_user_session_path, method: :delete, data: { confirm: "Are you sure to leave?" }, class: "btn" do%>
-        <i class="fa fa-sign-out"> Sign Out</i>
-      <% end %>
-    <% else %>
-      <%= link_to user_registration_path, class: "btn" do %>
-        <span class="fa fa-user-plus"> Sign Up</span>
-      <% end %>
-      <%= link_to new_user_session_path, class: "btn" do %>
-        <span class="fa fa-sign-in"> Sign In</span>
-      <% end %>
-    <% end %>
+    </div>
   </div>
 </div>
