--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Markbook</title>
-    <%= render "layouts/header" %>
-  </head>
+	<head>
+		<title>Markbook</title>
+		<%= render "layouts/header" %>
+	</head>
 
-  <body>
-    <div class="navbar navbar-inverse" id="Zuckerbar">
-      <div class="container">
-        <%= render "layouts/zuckerbar" %>
-      </div>
-    </div>
+	<body>
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="Zuckerbar">
+		<div class="container">
+			<%= render "layouts/zuckerbar" %>
+		</div>
+	</nav>
 
-    <div class="container" id="main">
-      <%= yield %>
-    </div>
+		<div class="container" id="main">
+			<%= yield %>
+		</div>
 
-    <% if user_signed_in? %>
-      <div class="navbar navbar-nav navbar-inverse navbar-fixed-bottom">
-        <div class="container">
-          <center>
-            <button id="message-open" onclick="openMessageBoard()">
-              <span class="glyphicon glyphicon-chevron-up"></span>
-            </button>
-            <button id="message-close" onclick="closeMessageBoard()">
-              <span class="glyphicon glyphicon-chevron-down"></span>
-            </button>
-          </center>
-          <center>
-            <%= render "layouts/messages" %>
-          </center>
-        </div>
-      </div>
+		<% if user_signed_in? %>
+			<nav class="navbar navbar-dark bg-dark fixed-bottom">
+				<div class="container">
+					<div class="text-center w-100">
+						<button id="message-open" onclick="openMessageBoard()" class="btn btn-link">
+							<i class="fa fa-chevron-up"></i>
+						</button>
+						<button id="message-close" onclick="closeMessageBoard()" class="btn btn-link">
+							<i class="fa fa-chevron-down"></i>
+						</button>
+					</div>
+					<div class="text-center w-100">
+						<%= render "layouts/messages" %>
+					</div>
+				</div>
+			</nav>
 
-      <script>
-        function openMessageBoard(){
-          document.getElementById("message-open").style.display="none"
-          document.getElementById("message-close").style.display="block"
-          document.getElementById("message-board").style.display="block"
-          document.getElementsByTagName("body")[0].style.padding=" 0 0 250px 0"
-        }
-        function closeMessageBoard(){
-          document.getElementById("message-open").style.display="block"
-          document.getElementById("message-close").style.display="none"
-          document.getElementById("message-board").style.display="none"
-          document.getElementsByTagName("body")[0].style.padding=" 0 0 50px 0"
-        }
-      </script>
-    <% end %>
+			<script>
+				function openMessageBoard(){
+					document.getElementById("message-open").style.display="none"
+					document.getElementById("message-close").style.display="block"
+					document.getElementById("message-board").style.display="block"
+					document.getElementsByTagName("body")[0].style.padding=" 0 0 250px 0"
+				}
+				function closeMessageBoard(){
+					document.getElementById("message-open").style.display="block"
+					document.getElementById("message-close").style.display="none"
+					document.getElementById("message-board").style.display="none"
+					document.getElementsByTagName("body")[0].style.padding=" 0 0 50px 0"
+				}
+			</script>
+		<% end %>
 
-  </body>
+	</body>
 </html>
