--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,8 +12,8 @@
         <%= devise_error_messages! %>
         <div class="form-group">
           <div class="field">
-            <%= f.label :mugshot %><br />
-            <%= f.file_field :image %>
+            <%= f.label :avatar %><br />
+            <%= f.file_field :avatar %>
           </div>
           <br>
 
