--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,7 +2,11 @@
   <div class="nav navbar-default">
     <div id="comment-body">
       <div class="navbar-header" id="comment-user">
-        <%= image_tag comment.user.image_url(:thumb), width: 20, height: 20, class: "img-circle" unless comment.user.image_url.nil? %>
+        <% if comment.user.avatar.attached? %>
+					<%= image_tag comment.user.avatar.variant(resize_to_fill: [20, 20]), class: "img-circle" %>
+				<% else %>
+					<%= image_tag "eye.jpg", width: 20, height: 20, class: "img-circle" %>
+				<% end %>
       </div>
       <div class="navbar-left">
         <%= link_to user_profile_path(comment.user) do %>
