--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,11 @@
       <div class="panel-heading" id="profile-head">
         <div class="nav">
           <div class="navbar-left">
-            <%= image_tag @user.image_url(:medium), width: 100, height: 100 unless @user.image_url.nil? %>&nbsp&nbsp
+            <% if @user.avatar.attached? %>
+							<%= image_tag @user.avatar.variant(resize_to_fill: [100, 100]), class: "img-fluid" %>
+						<% else %>
+							<%= image_tag "eye.jpg", width: 100, height: 100 %>
+						<% end %>&nbsp&nbsp
           </div>
         </div>
       </div>
