--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <% time = Time.now %>
 <% @now = "#{time.year}-#{time.month}-#{time.day}" %>
 <div class="col-md-6 col-md-offset-3" id="log-form">
-  <%= form_for(resource, as: resource_name, url: update_user_registration_path, html: { method: :put }, multipart: true) do |f| %>
+  <%= form_for(resource, as: resource_name, url: update_user_registration_path, html: { method: :put, multipart: true }) do |f| %>
     <div class="panel panel-default">
 
       <div class="panel-heading" id="log-name">
