--- a/app/views/layouts/_zuckerbar.html.erb
+++ b/app/views/layouts/_zuckerbar.html.erb
@@ -27,7 +27,7 @@
         <%= link_to edit_user_registration_path, class: "btn btn-outline-light" do%>
           <i class="fa fa-cog"></i> Account
         <% end %>
-        <%= link_to destroy_user_session_path, method: :delete, data: { confirm: "Are you sure to leave?" }, class: "btn btn-outline-light" do%>
+        <%= link_to destroy_user_session_path, data: { turbo_method: :delete, turbo_confirm: "Are you sure to leave?" }, class: "btn btn-outline-light" do%>
           <i class="fa fa-sign-out"></i> Sign Out
         <% end %>
       <% else %>
