chore: more APIs

--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -10,7 +10,7 @@
       Joined since <%= @user.created_at %>
     </div>
     <div class="label label-warning">
-      <%= link_to "/activities" do %>
+      <%= link_to my_activities_path do %>
         Check my acctivities
       <% end %>
     </div>
