feat: add frontend router

--- a/app/views/layouts/_zuckerbar.html.erb
+++ b/app/views/layouts/_zuckerbar.html.erb
@@ -1,5 +1,5 @@
 <a class="navbar-brand" href="<%= user_signed_in? ? '/posts' : '/' %>" id="Zuckerbrand">
-  <strong>Markbook</strong>
+  <strong>Zuckerbook</strong>
 </a>
 
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
