--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,475 @@
 <%= action_cable_meta_tag %>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+<style>
+	:root {
+		--dark: #2A2A2A;
+	}
+
+	body {
+		font-family: fantasy;
+		background-color: white;
+		padding-bottom: 50px;
+	}
+
+	a:not(.btn) {
+		color: white;
+		text-decoration: none;
+	}
+	a:not(.btn):hover,
+	a:not(.btn):visited,
+	a:not(.btn):active {
+		color: white;
+		text-decoration: none;
+	}
+
+	@media screen and (max-width: 768px) {
+		#Zucker-search, #comment-user {
+			display: none;
+		}
+	}
+
+	#Zuckerbar {
+		border-radius: 0;
+		position: fixed;
+		z-index: 999;
+		top: 0;
+		left: 0;
+		right: 0;
+	}
+
+	#Zuckerbrand {
+		padding-left: 1ex;
+		padding-right: 2ex;
+		color: white;
+		font-size: 28px;
+		font-weight: 600;
+	}
+
+	#main {
+		position: relative;
+		padding-top: 80px;
+		z-index: 1;
+	}
+
+	.container {
+
+	}
+
+	#message-board {
+		display: none;
+		border-radius: 10px;
+		background: none;
+		padding-left: 5ex;
+		padding-right: 5ex;
+		max-width: 600px;
+		text-align: left;
+	}
+
+	#messages {
+		padding-left: 3ex;
+		padding-right: 3ex;
+		background-color: white;
+		height: 150px;
+		overflow-y: scroll;
+		overflow-x: hidden;
+		word-break: break-all;
+	}
+	#message-write {
+		background-color: rgba(100,100,100,0.1);
+	}
+
+	#message-open {
+		background: none;
+		height: 100%;
+		width: 100%;
+		padding-top: 3px;
+		color: rgba(100,100,100,0.1);
+		border: none;
+	}
+	#message-open:hover {
+		padding-top: 2px;
+		color: white;
+		font-weight: bold;
+		//border-color: rgba(100,100,100,0.1);
+		//border-width: 1px;
+		//border-radius: 5px;
+		//border-style: solid;
+	}
+	#message-close {
+		background: none;
+		color: rgba(255,255,255,0.8);
+		border: none;
+		display: none;
+	}
+	#message-close:hover {
+		color: rgba(255,255,255,1);
+	}
+
+	.navbar-fixed-bottom {
+		padding-top: 10px;
+		max-height: 250px;
+		min-height: 50px;
+		bottom: -10px;
+		opacity: 0.98;
+		border-top: none;
+	}
+	.navbar-fixed-bottom:hover {
+	}
+
+	.panel-heading {
+		padding-top: 5ex;
+		padding-bottom: 0ex;
+	}
+	.panel-body.panel-footer {
+		padding-left: 5ex;
+		padding-right: 5ex;
+	}
+
+	.navbar-left {
+		padding-left: 0ex;
+	}
+	.navbar-right {
+		padding-right: 0ex;
+	}
+	.navbar {
+		margin-bottom: 1ex;
+	}
+
+	#post {
+		border-radius: 10px;
+		border-width: 0;
+		box-shadow: 8px 8px 30px;
+	}
+
+	#post-head {
+		border-radius: 10px 10px 0 0;
+		background-color: var(--dark);
+		padding-bottom: 0ex;
+	}
+
+	#post-info {
+		padding-bottom: 0ex;
+	}
+
+	#post-options {
+		background: none;
+		padding-right: 2ex;
+		position: sticky;
+	}
+
+	#post-option-open {
+		color: white;
+		background: none;
+		border-color: rgba(255,255,255,0);
+		border-radius:5px;
+	}
+
+	#post-option-open:hover {
+		border-color: rgba(255,255,255,0.2);
+		border-width: thin;
+		border-radius:5px;
+	}
+
+
+	.img-circle {
+		border-style: solid;
+		border-color: #A0A0A0;
+		border-width: thin;
+	}
+
+	#post-name {
+		padding-left: 0px;
+		padding-top: 0px;
+		font-size: 20px;
+		font-weight: 600;
+		color: white;
+		font-family: 'Didact Gothic';
+	}
+	#post-time {
+		font-size: 10px;
+		font-style: 200;
+		font-family: 'Fantasy';
+		color: white;
+	}
+	#post-body {
+		padding: 3ex 2ex 1ex 2ex;
+		font-size: 20px;
+	}
+
+	#comment-menu {
+		min-width: 630px;
+		margin: 0ex auto 0ex 5ex;
+		padding-top: 0;
+		padding-bottom: 0;
+	}
+
+	#comment-add {
+		margin: 0ex auto 0ex 3ex;
+		padding-left: 2ex;
+	}
+
+	#post-react-btn {
+		color: white;
+	}
+
+	#reaction-options {
+		color: pink;
+		opacity: 1;
+		padding: 0ex 5ex 1ex 5ex;
+	}
+
+	#comment-body {
+		padding: 2ex 1ex 2ex 1ex;
+
+	}
+
+	#comment-name {
+		font-family: 'Didact Gothic';
+		padding-left: 2ex;
+		padding-right: 2ex;
+	}
+
+	#comment-content {
+		padding: 0 2ex 0 2ex;
+		word-break: break-all;
+		white-space: initial;
+	}
+
+	#comment-field {
+		width: 400px;
+	}
+
+	#edit-body {
+		width: 100%;
+	}
+
+	#edit-text {
+		width: inherit;
+		height: 240px;
+		font-size: 20px;
+		resize: vertical;
+	}
+
+	a:hover {
+
+	}
+
+	#profile-name {
+		padding-top: 0px;
+		font-size: 50px;
+		font-family: 'fantasy';
+	}
+	#profile-head {
+		background-color: #3A3A3A;
+		padding-bottom: 3ex;
+	}
+
+	#profile-body {
+		padding: 5ex 4ex 2ex 4ex;
+		font-family: 'Didact Gothic';
+		font-weight: bold;
+	}
+
+	#profile-footer {
+		padding: 2ex 3ex 2ex 3ex;
+		font-family: 'Didact Gothic';
+		font-weight: bolder;
+	}
+
+	#profile {
+		padding-top: 2px;
+	}
+
+	#log-form {
+		padding-top: 60px;
+		font-family: 'Didact Gothic';
+	}
+	li {
+		margin: 0 10px 0 10px;
+	}
+
+	#log-name {
+		padding-top: 30px;
+		font-size: 30px;
+		font-weight: 600;
+		background-color: var(--dark);
+		color: white;
+	}
+	#manager-name {
+		font-family: "Didact Gothic";
+		font-size: 20px;
+		color: white;
+	}
+	#manager-body {
+		font-family: "Didact Gothic";
+		padding: 1ex 3ex 1ex 3ex;
+	}
+	#manager-img {
+		border-style: solid;
+		border-color: white;
+		border-width: thin;
+	}
+
+	#manager-heading {
+		padding-top: 30px;
+		font-weight: 500;
+		color: white;
+		opacity: 100%;
+		background-color: var(--dark);
+		.nav, .navbar-left {
+			background-color: var(--dark);
+		}
+	}
+
+	#manager-footer {
+		color: white;
+
+	}
+
+	.pagination {
+		position: static;
+		bottom: 0;
+	}
+	#page-bar {
+		display: none;
+	}
+	#activity-head {
+		color: white;
+		background-color: var(--dark);
+		font-weight: 400;
+		padding-left: 5ex;
+		padding-right: 5ex;
+		padding-bottom: 2ex;
+		padding-top: 3ex;
+		border-width: 0;
+		border-radius: 0;
+	}
+	#activity {
+		border-width: 0;
+		box-shadow: 20px 20px 100px;
+	}
+	#manager-links {
+		font-weight: bold;
+	}
+	#manager-link {
+		color: inherit;
+	}
+	#links-label {
+		font-weight: 100;
+		font-size: 10px;
+		font-style: fantasy
+
+	}
+
+	#warning-message {
+		width: 720px;
+	}
+
+	#notice-box {
+		background-color: var(--dark);
+		border-radius: 5px;
+		padding-left: 5ex;
+		padding-right: 5ex;
+		padding-top: 3ex;
+		padding-bottom: 2ex;
+	}
+
+	#notice {
+		background-color: var(--dark);
+		color: white;
+		font-family: "Didact Gothic";
+		font-size: 20px;
+		font-weight: bold;
+	}
+
+	body {
+		background-color: #fff;
+		color: #333;
+		margin: 33px;
+		font-family: verdana, arial, helvetica, sans-serif;
+		font-size: 13px;
+		line-height: 18px;
+	}
+
+	p, ol, ul, td {
+		font-family: verdana, arial, helvetica, sans-serif;
+		font-size: 13px;
+		line-height: 18px;
+	}
+
+	pre {
+		background-color: #eee;
+		padding: 10px;
+		font-size: 11px;
+	}
+
+	a:not(.btn) {
+		color: #000;
+
+		&:visited {
+			color: #666;
+		}
+
+		&:hover {
+			color: #fff;
+			background-color: #000;
+		}
+	}
+
+	th {
+		padding-bottom: 5px;
+	}
+
+	td {
+		padding: 0 5px 7px;
+	}
+
+	div {
+		&.field, &.actions {
+			margin-bottom: 10px;
+		}
+	}
+
+	#notice {
+		color: green;
+	}
+
+	.field_with_errors {
+		padding: 2px;
+		background-color: red;
+		display: table;
+	}
+
+	#error_explanation {
+		width: 450px;
+		border: 2px solid red;
+		padding: 7px 7px 0;
+		margin-bottom: 20px;
+		background-color: #f0f0f0;
+
+		h2 {
+			text-align: left;
+			font-weight: bold;
+			padding: 5px 5px 5px 15px;
+			font-size: 12px;
+			margin: -7px -7px 0;
+			background-color: #c00;
+			color: #fff;
+		}
+
+		ul li {
+			font-size: 12px;
+			list-style: square;
+		}
+	}
+
+	label {
+		display: block;
+	}
+</style>
