feat: posts pagination

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -78,6 +78,6 @@
       </div>
     </div>
     <div class="panel-body" >
-      <%= render post.comments || "comments/comment" %>
+      <%= render post.comments %>
     </div>
   </div>
