--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -21,6 +21,11 @@ body {
 	background-attachment: fixed;
 }
 
+.zucker-panel {
+  background: var(--color-panel-translucent);
+  backdrop-filter: blur(30px);
+}
+
 .hero-section {
 	text-align: center;
 	padding: 100px 20px;
@@ -96,4 +101,9 @@ body {
 	border-radius: 20px;
 	font-size: 0.9rem;
 	margin-left: 10px;
+}
+
+a, a:hover, a:visited, a:active {
+  color: inherit;
+  text-decoration: none;
 }
